# electric-mustang-wiring

./: .gitignore  README.md  inventory-of-12v-system.md  rp2040-programming-notes.md
12v-cabin/: 12v-cabin-cache.lib  12v-cabin.kicad_pcb  12v-cabin.kicad_pro  12v-cabin.kicad_sch  12v-cabin.sch  12v-front-pcb.kicad_pcb  12v-front-pcb.kicad_pro  12v-front-pcb.kicad_sch
12v-front-pcb/: #auto_saved_files#  12v-front-pcb.kicad_pcb  12v-front-pcb.kicad_pro  12v-front-pcb.kicad_sch  12v-front-pcb.net  12v-front-pcb.pro  12v-front-pcb.sch  fp-info-cache
12v-front-pcb/gerbers/: 12v-front-pcb-B_Cu.gbl  12v-front-pcb-B_Mask.gbs  12v-front-pcb-B_Paste.gbp  12v-front-pcb-B_Silkscreen.gbo  12v-front-pcb-Edge_Cuts.gm1  12v-front-pcb-F_Cu.gtl  12v-front-pcb-F_Mask.gts  12v-front-pcb-F_Paste.gtp  12v-front-pcb-F_Silkscreen.gto  12v-front-pcb-In1_Cu.g2  12v-front-pcb-In2_Cu.g3  12v-front-pcb-NPTH-drl_map.gbr  12v-front-pcb-NPTH.drl  12v-front-pcb-PTH-drl_map.gbr  12v-front-pcb-PTH.drl
12v-lighting/: 12v-lighting.kicad_pcb  12v-lighting.kicad_pro  12v-lighting.kicad_sch  fp-lib-table
12v-rear-pcb/: 12v-rear-cache.lib  12v-rear.kicad_pcb  12v-rear.kicad_pro  12v-rear.kicad_sch  12v-rear.pro  12v-rear.sch
bms/: bms-functional-spec.md  installation.md  simpbms-messages.txt
bms/src/: .gitignore  CMakeLists.txt  CRC8.cpp  CRC8.h  battery.cpp  battery.h  bms.cpp  bms.h  comms.cpp  comms.h  contactors.cpp  contactors.h  inputs.cpp  inputs.h  led.cpp  led.h  module.cpp  module.h  pack.c  pack.cpp  pack.h  settings.h  statemachine.cpp  statemachine.h  structs.h
bms/src/include/: CRC8.h  battery.h  bms.h  comms.h  inputs.h  led.h  module.h  pack.h  statemachine.h
bms/src/test/module/: test.cpp
bms/test/: README.md  charger.py  shunt.py
charge-controller/: chademo.md  charge-controller-functional-spec.md
charge-controller/src/: .gitignore  CMakeLists.txt  battery.cpp  battery.h  car.cpp  car.h  ccs.cpp  ccs.h  ccscomms.cpp  ccscomms.h  ccsstatemachine.cpp  ccsstatemachine.h  chademo.cpp  chademo.h  chademocomms.cpp  chademocomms.h  chademostatemachine.cpp  chademostatemachine.h  chademostation.cpp  chademostation.h  charger.cpp  charger.h  comms.cpp  comms.h  inputs.cpp  inputs.h  settings.h  util.cpp  util.h
dashboard/: dashboard-functional-spec.md
dashboard-vcu/: bom.txt  dashboard-vcu-cache.lib  dashboard-vcu.kicad_pcb  dashboard-vcu.kicad_pro  dashboard-vcu.kicad_sch  dashboard-vcu.pro  dashboard-vcu.sch
dashboard-vcu-pico/: .gitignore  can.c  can.h  dashboard.c  fuel.c  fuel.h  notes.txt
dashboard-vcu-src/: TODO.md  bom.txt
dashboard-vcu-src/dashboard-vcu/: dashboard-vcu.ino
tail-lights/: tail-lights.bom.csv
tail-lights/gerbers/: tail-lights-B_Cu.gbl  tail-lights-B_Mask.gbs  tail-lights-B_Paste.gbp  tail-lights-B_Silkscreen.gbo  tail-lights-Edge_Cuts.gm1  tail-lights-F_Cu.gtl  tail-lights-F_Mask.gts  tail-lights-F_Paste.gtp  tail-lights-F_Silkscreen.gto  tail-lights-NPTH-drl_map.gbr  tail-lights-NPTH.drl  tail-lights-PTH-drl_map.gbr  tail-lights-PTH.drl
tail-lights/pos/: tail-lights-top-pos.csv
tail-lights/tail-lights/: #auto_saved_files#  tail-lights.kicad_pcb  tail-lights.kicad_pro  (+1 more)
voicebox/: nodes.md
voicebox/src/: CMakeLists.txt  voicebox.c
wiring-diagrams/: Makefile  charge.cables.yaml  charge.connections.yaml  charge.connectors.yaml  common.cables.yaml  common.connections.yaml  common.connectors.yaml  drive.cables.yaml  drive.connections.yaml  drive.connectors.yaml  lights.cables.yaml  lights.connections.yaml  lights.connectors.yaml  merge-yaml.py  mustang.bom.tsv  mustang.gv  mustang.html  mustang.yaml  notes.md
(+44 files in other folders)
